# tg-auto-channels

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_image_generation_support.py  0003_add_news_sources.py
app/: main.py
app/api/: channels.py  deps.py  preview.py
app/content/: factory.py  interfaces.py  registry.py
app/content/strategies/: news_digest.py  openai_chat.py  placeholder.py
app/core/: config.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  channel.py  post.py
app/repositories/: channels.py  posts.py
app/schemas/: channel.py  post.py
app/services/: image_generation.py  posting.py  scheduler.py
app/telegram/: client.py
tests/: test_posting_service.py
