[project]
name = "tg-auto-channels"
version = "0.1.0"
description = "Telegram channel autoposting MVP"
authors = [{ name = "AutoBot" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.dependencies]
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
aiogram = "^3.7.0"
apscheduler = "^3.10.4"
SQLAlchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
openai = "^1.30.0"

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "S", "W"]
ignore = ["S101"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
