[project]
name = "tg-auto-channels"
version = "0.1.0"
description = "Telegram autoposting MVP using FastAPI, aiogram, SQLAlchemy, and APScheduler"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.0",
  "aiogram==3.7.0",
  "apscheduler==3.10.4",
  "SQLAlchemy[asyncio]==2.0.30",
  "asyncpg==0.29.0",
  "psycopg2-binary==2.9.9",
  "pydantic==2.7.1",
  "pydantic-settings==2.2.1",
  "alembic==1.13.1",
  "python-dotenv==1.0.1",
  "httpx==0.27.2",
  "openai==1.55.3"
]
